--- a/Frontend/src/pages/CreateSoftware.css
+++ b/Frontend/src/pages/CreateSoftware.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
-  background: linear-gradient(to top right, #f4f4f4, #919193);
+  /* background-color: #5973a7 ; */
   margin: 0;
   padding: 0;
 }
