--- a/Frontend/src/pages/Signup.css
+++ b/Frontend/src/pages/Signup.css
@@ -3,7 +3,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
-  background-color: #f9fafb;
+  /* background-color: #f9fafb; */
   margin: 0;
   padding: 0;
 }
